syntax = "proto3";
import "proto/Helpers.proto";

message User{
    string name = 1;
    string email = 2;
    oneof optional_password {
        string password = 3;
    }
}

message UserResponse{
    User user = 1;
    UserStatus user_status = 2;
    UUID user_id= 3;
    string token=4;
    Timestamp created_at = 5;
    Timestamp updated_at = 6;
    bool is_verified = 7;
}

service CreateUserService{
    rpc CreateUser(User) returns (UserResponse);
}

service FindUserService{
    rpc FindUser(User) returns (UserResponse);
    rpc FindUsers(User) returns (stream UserResponse);
}


